--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- Background video (optional). If you aren't using video, you can delete this block. -->
   <video id="bgVideo" class="bg-video" autoplay muted loop playsinline>
-    <source src="videos/bground.mp4" type="video/mp4" />
+    <source src="videos/backgrounds/bground.mp4" type="video/mp4" />
   </video>
 
   <!-- Visual layer for popups -->
@@ -24,12 +24,13 @@
 
   <!-- Buttons -->
   <button id="btnDownloadMp3" class="btn btn-mp3" type="button" aria-label="Download MP3">
-    <img src="images/download_mp3.png" alt="Download MP3" />
+    <img src="images/visuals/download_mp3.png" alt="Download MP3" />
   </button>
 
   <button id="btnDownloadWav" class="btn btn-wav" type="button" aria-label="Download WAV">
-    <img src="images/download_wav.png" alt="Download WAV" />
+    <img src="images/visuals/download_wav.png" alt="Download WAV" />
   </button>
+
 
   <script src="main.js"></script>
 </body>
